feat: set fcm on setting and .env file

--- a/.envs/django.env.example
+++ b/.envs/django.env.example
@@ -18,3 +18,6 @@ REDIS_USER=default
 REDIS_PASSWORD=foobared
 REDIS_HOST=redis
 REDIS_PORT=6379
+
+#FIREBASE
+FIREBASE_CREDENTIALS_FILE_NAME="firebase_key.json"
