fix: local environment setup and configurations has been checked and unecessary commands are removed from starter

--- a/.envs/postgres.env.example
+++ b/.envs/postgres.env.example
@@ -1,5 +1,5 @@
-POSTGRES_DB=local
-POSTGRES_USER=local
-POSTGRES_PASSWORD=local
-POSTGRES_HOST=0.0.0.0
+POSTGRES_DB=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=starter_database
 POSTGRES_PORT=5432
