refactor: naming issues in django starter boilerplate

--- a/.supervisord/celery_worker.conf
+++ b/.supervisord/celery_worker.conf
@@ -1,4 +1,4 @@
-[program:bisti-celery-worker]
+[program:starter-celery-worker]
 directory=/code/
 process_name=%(program_name)s_%(process_num)02d
 command=celery -A apps.core.celery worker --loglevel=info -E
