--- a/.supervisord/api.conf
+++ b/.supervisord/api.conf
@@ -1,4 +1,4 @@
-[program:bisti-api]
+[program:starter-api]
 directory=/code/
 process_name=%(program_name)s_%(process_num)02d
 command=gunicorn --workers=10 --bind=0.0.0.0:8000 config.asgi:application -k uvicorn.workers.UvicornWorker --timeout 1000
