--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,13 +1,13 @@
 version: '3.9'
 
 services:
-  web:
+  backend:
     build:
       context: ./
       dockerfile: ./Dockerfile.local
     restart: unless-stopped
-    container_name: starter_web
-    hostname: starter_web
+    container_name: starter_backend
+    hostname: starter_backend
     volumes:
       - .:/code
     env_file:
