--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,13 +1,13 @@
 version: '3.9'
 
 services:
-  web:
+  backend:
     build:
       context: ../
       dockerfile: ./Dockerfile.prod
     restart: unless-stopped
-    container_name: bisti_web_prod
-    hostname: bisti_web_prod
+    container_name: starter_backend_prod
+    hostname: starter_backend_prod
     ports:
       - "8000:8000"
     env_file:
@@ -32,8 +32,8 @@ services:
   database:
     image: postgres:14
     restart: unless-stopped
-    container_name: bisti_database_prod
-    hostname: bisti_database_prod
+    container_name: starter_database_prod
+    hostname: starter_database_prod
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
     env_file:
@@ -50,8 +50,8 @@ services:
   redis:
     image: redis:7
     restart: unless-stopped
-    container_name: bisti_redis_prod
-    hostname: bisti_redis_prod
+    container_name: starter_redis_prod
+    hostname: starter_redis_prod
     env_file:
       - ../.envs/.redis
     expose:
