--- a/.supervisord/api.conf
+++ b/.supervisord/api.conf
@@ -1,5 +1,5 @@
 [program:starter-api]
-directory=/code/
+directory=/app/
 process_name=%(program_name)s_%(process_num)02d
 command=gunicorn --workers=10 --bind=0.0.0.0:8000 config.asgi:application -k uvicorn.workers.UvicornWorker --timeout 1000
 autostart=true
