--- a/.supervisord/celery_flower.conf
+++ b/.supervisord/celery_flower.conf
@@ -1,5 +1,5 @@
 [program:data-warehouse-celery-flower]
-directory=/code/
+directory=/app/
 process_name=%(program_name)s_%(process_num)02d
 command=celery -A apps.core.celery flower --port=5566
 autostart=true
