--- a/.supervisord/celery_worker.conf
+++ b/.supervisord/celery_worker.conf
@@ -1,5 +1,5 @@
 [program:starter-celery-worker]
-directory=/code/
+directory=/app/
 process_name=%(program_name)s_%(process_num)02d
 command=celery -A apps.core.celery worker --loglevel=info -E
 autostart=true
