--- a/.supervisord/celery_beat.conf
+++ b/.supervisord/celery_beat.conf
@@ -1,5 +1,5 @@
 [program:data-warehouse-celery-beat]
-directory=/code/
+directory=/app/
 process_name=%(program_name)s_%(process_num)02d
 command=celery -A apps.core.celery beat --loglevel=info
 autostart=true
