--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -26,7 +26,7 @@ RUN find /opt/venv -type d -name "test" -name "tests" -delete 2>/dev/null
 
 FROM python:3.10-slim AS build-image
 
-WORKDIR /code/
+WORKDIR /app/
 
 COPY --from=compile-image /opt/venv /opt/venv
 
@@ -48,16 +48,16 @@ ADD ./.supervisord/celery_worker.conf /etc/supervisor/conf.d/celery_worker.conf
 ADD ./.supervisord/celery_beat.conf /etc/supervisor/conf.d/celery_beat.conf
 ADD ./.supervisord/celery_flower.conf /etc/supervisor/conf.d/celery_flower.conf
 
-RUN mkdir -p /code/logs/
+RUN mkdir -p /app/logs/
 
-# Entrypoint
-COPY entrypoint.sh /code/entrypoint.sh
-RUN sed -i 's/\r$//g' /code/entrypoint.sh
-RUN chmod +x /code/entrypoint.sh
+# Add required scripts
+COPY ./scripts /app/scripts
+RUN sed -i 's/\r$//g' /app/scripts/*
+RUN chmod -R +x /app/scripts/*
 
 # For security and image performance, directories will be hardcoded
-COPY .envs /code/.envs
-COPY apps /code/apps
-COPY config /code/config
-COPY static /code/static
-COPY manage.py /code/manage.py
+COPY .envs /app/.envs
+COPY apps /app/apps
+COPY config /app/config
+COPY static /app/static
+COPY manage.py /app/manage.py
