--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   backend:
     build:
-      context: ../
+      context: ./
       dockerfile: ./Dockerfile.prod
     restart: unless-stopped
     container_name: starter_backend_prod
@@ -11,7 +11,7 @@ services:
     ports:
       - "8000:8000"
     env_file:
-      - ../.envs/.django
+      - ./.envs/.django
     depends_on:
       database:
         condition: service_healthy
@@ -21,7 +21,7 @@ services:
     volumes:
       - ../static:/app/static
       - ../media:/app/media
-      - ../apps:/app/apps
+      - ./apps:/app/apps
     healthcheck:
       test: ["CMD", "/app/scripts/health.sh"]
       interval: 10s
@@ -53,7 +53,7 @@ services:
     container_name: starter_redis_prod
     hostname: starter_redis_prod
     env_file:
-      - ../.envs/.redis
+      - ./.envs/.redis
     expose:
       - 6379
     volumes:
